added styles for body tag

--- a/Template/index.hbs
+++ b/Template/index.hbs
@@ -1,12 +1,14 @@
 <html>
     <link rel="stylesheet" href="css/stylesheet.css">
     <title>{{about}}</title>
-<h1>index</h1>
+
 <body>
+    <h1>Weather APP</h1>
     <form>
-        <input type="text" id="mytext" placeholder="Location"></input>
+        <input type="text" id="mytext" placeholder="Enter Location"></input>
          
         <button onclick="functionName(mytext.value)">Search</button>
+    
     <p id="weather-info"></p>
     </form>
 
