made final changes for .js file

--- a/Template/index.hbs
+++ b/Template/index.hbs
@@ -9,7 +9,11 @@
          
         <button onclick="functionName(mytext.value)">Search</button>
     
-    <p id="weather-info"></p>
+    <p id="weather-location"> </p>
+    <p id="weather-description"></p>
+    <p id="weather-temperature"></p>
+    
+    
     </form>
 
 </body>
